[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/arapey.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/skull.png" type="Texture" id=2]
[ext_resource path="res://menus/MenuButton.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 38
outline_color = Color( 0.603922, 0.203922, 0.203922, 1 )
font_data = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" groups=["MenuButton"]]
margin_right = 1024.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
focus_mode = 1
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_colors/selection_color = Color( 1, 0.0509804, 0.0509804, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center] Text button [/center]"
text = " Text button "
scroll_active = false

[node name="RightArrow" type="Sprite" parent="."]
position = Vector2( 612, 13.125 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="LeftArrow" type="Sprite" parent="."]
position = Vector2( 412, 13.125 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
flip_h = true

[connection signal="focus_entered" from="." to="." method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TextureButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
